# bewirb.es

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  COMPETENCIES.md  README.md  anonymize_config.yaml.example  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
adr/ADR-001-python/: index.html
adr/ADR-002-mda-ansatz/: index.html
adr/ADR-003-zwei-dsls/: index.html
adr/ADR-004-hybrid-ki/: index.html
adr/ADR-005-fastapi/: index.html
adr/ADR-006-aise-ansatz/: index.html
adr/ADR-007-ddd-ansatz/: index.html
adr/ADR-008-meta-programm/: index.html
adr/ADR-009-autorenschaft/: index.html
codegen/: codegen.py
context_map/: index.html
docs/: context_map.md  kochbuch.md  methodology.md  ubiquitous_language.md
grammar/: knowledge.tx  profile.tx  requirements.tx
knowledge/: competency_graph.yaml  opinions.knowledge  opinions.yaml  taxonomy.knowledge  technology_taxonomy.yaml
methodology/: index.html
prompts/: enrich_keywords.md  enrich_projekt.md  extract_requirements.md  generate_kurzprofil.md  import_profile.md
scripts/: advise.py  anonymize_doc.py  build_plan_docx.py  create_template.py  enrich_profile.py  extract.py  generate.py  import_profile.py
search/: search_index.json
src/: advisor.py  anonymizer.py  data_loader.py  extractor.py  graph_builder.py  graph_schema.py  knowledge_loader.py  matcher.py  models.py  pim_to_psm.py  profile_enricher.py  profile_importer.py  zielgruppe.py
templates/: profil.docx
tests/: conftest.py
ubiquitous_language/: index.html
web/: schemas.py
(+57 files in other folders)
