[project]
name = "profile-generator"
version = "0.1.0"
description = "MDA-basierter Profil-Generator für Freiberufler-Bewerbungen"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]


[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
markers = [
    "unit: schnelle Unit-Tests ohne externe Abhängigkeiten",
    "integration: benötigt Claude API Key (langsam)",
    "snapshot: Snapshot-Tests",
    "eval: KI-Qualitäts-Evaluierung",
]
testpaths = ["tests"]
